# pyV1730

./: CMakeLists.txt
include/: digitizer.hpp
src/: bindings.cpp  digitizer.cpp
